# code-inspector-mcp

./: .gitignore  README.md  pyproject.toml  uninstall.sh  update.sh
.claude/: settings.json
.claude/agents/: lead.md  qa.md  verifier.md
.claude/agents/guides/: tc-guide.md
.claude/ai-bouncer/: config.json  manifest.json
.claude/hooks/: bash-audit.sh  bash-gate.sh  completion-gate.sh  hooks.json  plan-gate.sh
.claude/hooks/lib/: resolve-task.sh
.claude/skills/dev-bounce/: SKILL.md
docs/2026-03-14/code-inspector-mcp/: plan.md  state.json
docs/2026-03-14/code-inspector-mcp/phase-1-foundation/: phase.md  step-1.md  step-2.md  step-3.md
docs/2026-03-14/code-inspector-mcp/phase-2-inspectors/: phase.md  step-1.md  step-2.md  step-3.md  step-4.md
docs/2026-03-14/code-inspector-mcp/phase-3-server/: phase.md  step-1.md
docs/2026-03-14/code-inspector-mcp/verifications/: round-1.md  round-2.md  round-3.md
docs/2026-03-14/inspect-init-config/: plan.md  state.json
docs/2026-03-14/inspect-init-config/phase-1-config/: phase.md  step-1.md
docs/2026-03-14/inspect-init-config/phase-2-init/: phase.md  step-1.md
docs/2026-03-14/inspect-init-config/phase-3-config-tool/: phase.md  step-1.md
docs/2026-03-14/integrate-unimplemented-features/: plan.md  state.json
docs/2026-03-14/readme-github-setup/: plan.md  state.json  tests.md
src/code_inspector/: config.py  models.py  scoring.py  server.py
src/code_inspector/inspectors/: android_lint.py  base.py  detekt.py  ktlint.py
src/code_inspector/metrics/: complexity.py  coverage.py  duplication.py
(+18 files in other folders)
