[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-inspector-mcp"
version = "0.1.0"
description = "MCP server for code quality inspection using detekt, ktlint, and Android Lint"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/code_inspector"]

[project.scripts]
code-inspector = "code_inspector.server:main"
